--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "mongoose": "^8.3.4",
     "nodemon": "^3.1.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
+  }
 }
